--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
     <div class="slideshow">
       <span class="btn_cerrar">&times;</span>
       <div class="botones atras">
-        <i  href="javascript:history.go(-1)" class="fa-solid fa-arrow-left"></i>
+        <i class="fa-solid fa-arrow-left"></i>
           </span>
       </div>
       <div class="botones adelante">
-        <i class="fa-solid fa-arrow-right" href="javascript:history.go(1)"></i>
+        <i class="fa-solid fa-arrow-right"></i>
       </div>
       <img src="" alt="" id="img_slideshow">
     </div>
